--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
             { question: "Who created Barbie?", answers: ["Ruth Handler", "Elliot Handler", "Margaret Adams", "James Mattel"], correct: "Ruth Handler" },
             { question: "What was the first Barbie doll's profession?", answers: ["Doctor", "Astronaut", "Fashion Model", "Teacher"], correct: "Fashion Model" },
             { question: "What is the name of Barbie’s longtime boyfriend?", answers: ["John", "Kevin", "Ken", "Mike"], correct: "Ken" },
+            { question: "What is the name of Barbie’s first best friend doll?", answers: ["Midge", "Skipper", "Chelsea", "kelly"], correct: "Chelsea" },
+            { question: "What is Barbie's pet dog names?", answers: ["Honey", "Taffy", "Bella", "Taffy"], correct: "Taffy" },
+            { question: "What was Barbie's first car?", answers: ["Pink corvette", "Blue Jeep", "Red Ferrari", "Yellow Buggy"], correct: "Pink corvette" },
+            { question: "What is barbie's iconic shoe style?", answers: ["Sneakers", "Heels", "Boots", "Sandals"], correct: "Heels" },
+            { question: "What is the title of the first ever babrie movie", answers: ["Barbie and the Diamond Castle", "Barbie as Rapunzel", " Barbie in the Nutcracker", "Barbie and the Magic of Pegasus"], correct: "Barbie in the Nutcracker" },
+            { question: "Who is Barbie's rival in Barbie: Life in the Dreamhouse? ", answers: ["Raquelle", "Teresa", "Skipper", "Nikki"], correct: "Raquelle" },
+            { question: "What is Barbie’s zodiac sign?", answers: ["Aries", "Pisces", "Leo", "Taurus"], correct: "Pisces" },
+            { question: "What is the name of Barbie's first TV series?", answers: ["Barbie: Life in the Dreamhouse", "Barbie Dreamtopia", " Barbie and Friends", "Barbie: The Animated Series"], correct: "Barbie: Life in the Dreamhouse" },
+            { question: "In which year did Barbie run for President for the first time?", answers: ["1992", "2000", "2008", "2016"], correct: "1992" },
             // Add 35 more questions here...
         ];
 
